--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "dev": "nodemon ./bin/www --exec babel-node --presets babel-preset-env"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.0.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "morgan": "~1.9.0"
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "~1.9.0",
+    "pg": "^7.11.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
