--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test mocha --require @babel/register --recursive ./src/test --exit",
+    "test": "nyc --reporter=html --reporter=text --timeout=10000 cross-env NODE_ENV=test mocha --require @babel/register --recursive ./src/test --exit",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "build": "babel src --out-dir dist --copy-files",
     "clean": "rm -rf dist && mkdir dist",
     "heroku-postbuild": "npm run clean && npm run build",
@@ -36,12 +37,15 @@
     "babel-eslint": "^10.0.2",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "coveralls": "^3.0.5",
     "cross-env": "^5.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.0",
     "mocha": "^6.1.4",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.1",
+    "nyc": "^14.1.1",
     "supertest": "^4.0.2"
   }
 }
